name:                EnvApp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/jhedev/EnvApp#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
copyright:           2015 Joel Hermanns
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable EnvApp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:         base >= 4.7 && < 5
                       , scotty
                       , text
                       , transformers
